--- a/app/(routes)/dashboard/admin-stats/stats-dashboard.module.css
+++ b/app/(routes)/dashboard/admin-stats/stats-dashboard.module.css
@@ -140,6 +140,12 @@
   height: 100%;
 }
 
+.fixedChartFrame {
+  width: 440px;
+  height: 300px;
+  margin: 0 auto;
+}
+
 .chartPlaceholder {
   width: 100%;
   height: 100%;
